Spelling Correction / Meta Keywords removed
keywords meta tags can hurt SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="description"
-    content="Full stack web develoer based in California with projects across the country." />
-    <meta name="keywords" content="Malak Abdul-Hafiz, Malak Abdul Hafiz, Malak Abdulhafiz, Malak Abdul">
+    content="Malak Abdul- Full stack web developer based in California with projects across the country." />
     <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat|Pacifico|Quicksand" rel="stylesheet">
     
     
