updated meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat|Pacifico|Quicksand" rel="stylesheet">
     
     
-    <title>Malak Abdul</title>
+    <title>Malak Abdul - Web Developer</title>
   </head>
   <body>
     <noscript>
